Devil - Angel - Jinx - Dumb funny wounds

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -771,33 +771,43 @@
         [/not]
     [/filter]
 #endif
-    {VARIABLE_OP rand_wound rand "1..10"}
+    {VARIABLE_OP rand_wound rand "1..50"}
     [switch]
         variable=rand_wound
 		 [case]
 			value=1
-			[if]
-				{NFW_funny_ENABLED}
-				[then]
-					{NFW_paper_cut_WOUND}
-                    {VARIABLE nfw_already_wound yes}
-				[/then]
-			[/if]
+			{NFW_paper_cut_WOUND}
+			{VARIABLE nfw_already_wound yes}
 		[/case]
 		[case]
 			value=2
-			[if]
-				{NFW_funny_ENABLED}
-				[then]
-					{NFW_stepped_on_lego_WOUND}
-                    {VARIABLE nfw_already_wound yes}
-				[/then]
-			[/if]
+			{NFW_stepped_on_lego_WOUND}
+			{VARIABLE nfw_already_wound yes}
+		[/case]
+		[case]
+			value=3
+			{NFW_jinx_WOUND}
+			{VARIABLE nfw_already_wound yes}
+		[/case]
+		[case]
+			value=3
+			{NFW_dumb_WOUND}
+			{VARIABLE nfw_already_wound yes}
+		[/case]
+		[case]
+			value=4
+			{NFW_angel_WOUND}
+			{VARIABLE nfw_already_wound yes}
+		[/case]
+		[case]
+			value=5
+			{NFW_devil_WOUND}
+			{VARIABLE nfw_already_wound yes}
 		[/case]
     [/switch]
 [/event]
 
-# random wound table
+# random wound table trigger
 [event]
     name=last_breath
     id=nfwme_wound_filter
@@ -1125,6 +1135,9 @@
                                 [or]
                                     variation=bat,drake,falcon,gryphon,bird
                                 [/or]
+								[not]
+									type=Drake Clasher,Drake Thrasher,Drake Arbiter,Drake Enforcer,Drake Warden
+								[/not]
                             [/filter]
                         [/have_location]
                         [and]
