--- a/utils/Wound_Healing.cfg
+++ b/utils/Wound_Healing.cfg
@@ -93,6 +93,10 @@
     name=post_advance
     id=aww_09_trigger_post_advance_amla_extra_bonus
     first_time_only=no
+    [filter_condition]
+		{VARIABLE_CONDITIONAL aww_was_amla equals yes}
+        {VARIABLE_CONDITIONAL aww_09_option_amla_bonus equals 1}
+    [/filter_condition]
     [filter]
         [not]
             [filter_wml]
@@ -102,37 +106,33 @@
             [/filter_wml]
         [/not]
     [/filter]
-    [filter_condition]
-        {VARIABLE_CONDITIONAL aww_09_enable_amla_bonus equals yes}
-        {VARIABLE_CONDITIONAL aww_was_amla equals yes}
-    [/filter_condition]
-    [fire_event]
-        name=aww_09_bonus_selection
-        [primary_unit]
-            x,y=$x1,$y1
-        [/primary_unit]
-    [/fire_event]
-    [unit_overlay]
-        {AWW_FILTER_CAN_BE_PROMOTED}
-        {EVENT_UNIT}
-        [not]
-            [filter_wml]
-                [variables]
-                    aww_amla_icon=yes
-                [/variables]
-            [/filter_wml]
-        [/not]
-        image=misc/aww-leader-bonus-bronze.png
-    [/unit_overlay]
-    [modify_unit]
-        [filter]
-            {AWW_FILTER_CAN_BE_PROMOTED}
-            {EVENT_UNIT}
-        [/filter]
-        [variables]
-            aww_amla_icon=yes
-        [/variables]
-    [/modify_unit]
+	[fire_event]
+		name=aww_09_bonus_selection
+		[primary_unit]
+			x,y=$x1,$y1
+		[/primary_unit]
+	[/fire_event]
+	[unit_overlay]
+		{AWW_FILTER_CAN_BE_PROMOTED}
+		{EVENT_UNIT}
+		[not]
+			[filter_wml]
+				[variables]
+					aww_amla_icon=yes
+				[/variables]
+			[/filter_wml]
+		[/not]
+		image=misc/aww-leader-bonus-bronze.png
+	[/unit_overlay]
+	[modify_unit]
+		[filter]
+			{AWW_FILTER_CAN_BE_PROMOTED}
+			{EVENT_UNIT}
+		[/filter]
+		[variables]
+			aww_amla_icon=yes
+		[/variables]
+	[/modify_unit]
 [/event]
 #endif
 
