--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -96,6 +96,7 @@
                 [advancement]
                     id=NFW_broken_arm_Healing
                     description=_ "Recover from broken arm"
+					max_times=-1
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -136,6 +137,7 @@
                 [advancement]
                     id=NFW_broken_wing_Healing
                     description=_ "Recover from broken wing"
+					max_times=-1
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -176,6 +178,7 @@
                 [advancement]
                     id=NFW_broken_leg_Healing
                     description=_ "Recover from broken leg"
+					max_times=-1
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -219,6 +222,7 @@
                 [advancement]
                     id=NFW_broken_rib_Healing
                     description= _"Recover from broken rib"
+					max_times=-1
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -263,6 +267,7 @@
                 [advancement]
                     id=NFW_burned_Healing
                     description= _"Recover from burn"
+					max_times=-1
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -337,6 +342,7 @@
                 [advancement]
                     id=NFW_concussion_Healing
                     description= _"Recover from concussion"
+					max_times=-1
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -776,6 +782,7 @@ Face your fears to try to overcome them."
                 [advancement]
                     id=NFW_frostbite_Healing
                     description= _"Recover from frostbite"
+					max_times=-1
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -819,6 +826,7 @@ Face your fears to try to overcome them."
                 [advancement]
                     id=NFW_gash_Healing
                     description= _"Recover from gash"
+					max_times=-1
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -856,6 +864,7 @@ Face your fears to try to overcome them."
                 [advancement]
                     id=NFW_infectiont_Healing
                     description= _"Recover from infection"
+					max_times=-1
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -907,6 +916,7 @@ Face your fears to try to overcome them."
                 [advancement]
                     id=NFW_insane_Healing
                     description= _"Recover from insanity"
+					max_times=-1
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -948,6 +958,7 @@ Face your fears to try to overcome them."
                 [advancement]
                     id=NFW_maimed_Healing
                     description= _"Recover from mutilation"
+					max_times=-1
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -1001,6 +1012,7 @@ Face your fears to try to overcome them."
                 [advancement]
                     id=NFW_necrosis_Healing
                     description= _"Recover from necrosis"
+					max_times=-1
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -1046,6 +1058,7 @@ Face your fears to try to overcome them."
                 [advancement]
                     id=NFW_necrosis_Healing
                     description= _"Recover from rot"
+					max_times=-1
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -1082,6 +1095,7 @@ Face your fears to try to overcome them."
                 [advancement]
                     id=NFW_amnesia_Healing
                     description= _"Recover from amnesia"
+					max_times=-1
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -1119,6 +1133,7 @@ Face your fears to try to overcome them."
                 [advancement]
                     id=NFW_sick_Healing
                     description= _"Recover from sickness"
+					max_times=-1
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -1170,6 +1185,7 @@ Face your fears to try to overcome them."
                 [advancement]
                     id=NFW_wild_magic_Healing
                     description= _"Recover from wild magic"
+					max_times=-1
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -1223,6 +1239,7 @@ Face your fears to try to overcome them."
                 [advancement]
                     id=NFW_damaged_Healing
                     description= _"Repair"
+					max_times=-1
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -1258,8 +1275,7 @@ Face your fears to try to overcome them."
                         id=paper_cut_display
                         name="<span color='#DA0000'>"+_"paper cut"+"</span>"
                         description=_"Due to the intense pain from your cut you cant concentrait on the fight.
-
-All damage is reduced by 20% and blade resistance is lowered by 30%"
+Damage -20% and blade resistance -50%"
                     [/display]
                 [/abilities]
             [/effect]
@@ -1267,7 +1283,7 @@ All damage is reduced by 20% and blade resistance is lowered by 30%"
                 apply_to=resistance
                 replace=no
                 [resistance]
-                    blade=30
+                    blade=50
                 [/resistance]
             [/effect]
             [effect]
@@ -1291,8 +1307,7 @@ All damage is reduced by 20% and blade resistance is lowered by 30%"
                         id=lego_display
                         name="<span color='#DA0000'>"+_"lego"+"</span>"
                         description=_"Due to the intense pain of stepping on plastic brick you cant walk properly.
-
-Movement is reduced by 20% and accuracy is reduced by 15%"
+Movement -20% and accuracy -15%"
                     [/display]
                 [/abilities]
             [/effect]
@@ -1338,22 +1353,137 @@ Movement is reduced by 20% and accuracy is reduced by 15%"
             [effect]
                 apply_to=new_ability
                 [abilities]
-                    [chance_to_hit]
+                    [leadership]
                         id=nfw_jinx
                         name="<span color='#DA0000'>"+_"jinx"+"</span>"
 						female_name= "<span color='#DA0000'>"+_"female^jinx"+"</span>"
                         description=_"He brings such bad luck around him, that all allied adjacent units will have their chance to hit halved."
-						divide=2
-						cumulative=no
+						add=-50
 						affect_self=no
-						[affect_adjacent]
-						[/affect_adjacent]
-					[/chance_to_hit]
+					[/leadership]
                 [/abilities]
             [/effect]
         [/object]
     [/modify_unit]
     {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Jinx" {NFW_COLOR_RED}}
+#enddef
+
+
+#define NFW_devil_WOUND
+    [modify_unit]
+        {FILTER_EVENT_UNIT}
+        [trait]
+            id=elemental
+        [/trait]
+        #textdomain wesnoth-help
+        [trait]
+            id=nfw_elemental_devil
+            name="<span color='#FF6400'>"+_"devil"+"</span>"
+            female_name="<span color='#FF6400'>"+_"female^devil"+"</span>"
+            description= _ "He has misbehaved and has been punished to a terrible fate. Immune to drain, poison, and plague"
+            help_text= _ "<italic>text='Elemental'</italic> units are immune to poison, drain, and plague."
+            [effect]
+                apply_to=status
+                add=unpoisonable
+            [/effect]
+            [effect]
+                apply_to=status
+                add=undrainable
+            [/effect]
+            [effect]
+                apply_to=status
+                add=unplagueable
+            [/effect]
+            # image
+            [effect]
+                apply_to=image_mod
+                replace=~O(40%)~CS(155,0,0)
+            [/effect]
+            # resistance
+            [effect]
+                apply_to=resistance
+                replace=no
+                [resistance]
+                    arcane=50
+                [/resistance]
+            [/effect]
+            # fire attacks
+            [effect]
+                apply_to=attack
+				range=melee
+                set_type=cold
+            [/effect]
+            [effect]
+                apply_to=attack
+				range=ranged
+                set_type=fire
+            [/effect]
+            #textdomain wesnoth-Non_Fatal_Wounds
+            # general damage debuff
+            [effect]
+                apply_to=attack
+                increase_damage=-50%
+            [/effect]
+        [/trait]
+    [/modify_unit]
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Go to Hell" color="255,0,0"}
+#enddef
+
+#define NFW_angel_WOUND
+    [modify_unit]
+        {FILTER_EVENT_UNIT}
+        [trait]
+            id=elemental
+        [/trait]
+        #textdomain wesnoth-help
+        [trait]
+            id=nfw_elemental_angel
+            name="<span color='#FF6400'>"+_"devil"+"</span>"
+            female_name="<span color='#FF6400'>"+_"female^devil"+"</span>"
+            description= _ "He behaved well and was returned to a divine mission. Immune to drain, poison, and plague"
+            help_text= _ "<italic>text='Elemental'</italic> units are immune to poison, drain, and plague."
+            [effect]
+                apply_to=status
+                add=unpoisonable
+            [/effect]
+            [effect]
+                apply_to=status
+                add=undrainable
+            [/effect]
+            [effect]
+                apply_to=status
+                add=unplagueable
+            [/effect]
+            # image
+            [effect]
+                apply_to=image_mod
+                replace=~O(40%)~CS(100,100,100)
+            [/effect]
+            # resistance
+            [effect]
+                apply_to=resistance
+                replace=no
+                [resistance]
+                    arcane=-50
+					fire=50
+					cold=50
+                [/resistance]
+            [/effect]
+            # arcane ranged attacks
+            [effect]
+                apply_to=attack
+				range=ranged
+                set_type=arcane
+            [/effect]
+            #textdomain wesnoth-Non_Fatal_Wounds
+            # general health debuff
+            [effect]
+                apply_to=hitpoints
+                increase_total=-50%
+            [/effect]
+        [/trait]
+    [/modify_unit]
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Go to Heaven" color="255,0,0"}
 #enddef
 
 #define NFW_TRAIT_UNDEAD
