--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -62,6 +62,15 @@
     [/filter]
     {VARIABLE nfw_scary_weapon $second_weapon.name}
     {VARIABLE nfw_weapon_type $second_weapon.type}
+    {VARIABLE nfw_scary_weapon_translated $second_weapon.description}
+    [store_unit_type]
+        type=$unit.type
+        variable=nfwe_unit_type
+    [/store_unit_type]
+    [store_unit_type]
+        type=$second_unit.type
+        variable=nfwe_second_unit_type
+    [/store_unit_type]
     [if]
         {NFW_wounds_DISABLED}
         [or]
@@ -97,6 +106,15 @@
     [/filter_second]
     {VARIABLE nfw_scary_weapon $weapon.name}
     {VARIABLE nfw_weapon_type $weapon.type}
+    {VARIABLE nfw_scary_weapon_translated $second_weapon.description}
+    [store_unit_type]
+        type=$unit.type
+        variable=nfwe_unit_type
+    [/store_unit_type]
+    [store_unit_type]
+        type=$second_unit.type
+        variable=nfwe_second_unit_type
+    [/store_unit_type]
     [if]
         {NFW_wounds_DISABLED}
         [or]
