--- a/utils/Wound_logic.cfg
+++ b/utils/Wound_logic.cfg
@@ -50,7 +50,6 @@
 
     [switch]
         variable=rand_status
-
         #sick wound
         [case]
             value=1,8
@@ -64,7 +63,6 @@
                 [/effect]
             [/modify_unit]
         [/case]
-
         #infection wound
         [case]
             value=5
@@ -76,6 +74,27 @@
                     apply_to=status
                     add=poisoned
                 [/effect]
+            [/modify_unit]
+        [/case]
+		#dumb wound
+        [case]
+            value=2,9
+            [modify_unit]
+                [filter]
+                    ability=dumb_display
+                [/filter]
+				[object]
+					id=nfw_disable_attacks
+					duration=turn end
+					[effect]
+						apply_to=image_mod
+						replace="CS(50,50,0)"
+					[/effect]
+					[effect]
+						apply_to=attack
+						set_attacks=0
+					[/effect]
+				[/object]
             [/modify_unit]
         [/case]
     [/switch]
