Menu with all the new wounds and changes and some fixes

--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -1306,7 +1306,7 @@ Damage -20% and blade resistance -50%"
                     [display]
                         id=lego_display
                         name="<span color='#DA0000'>"+_"lego"+"</span>"
-                        description=_"Due to the intense pain of stepping on plastic brick you cant walk properly.
+                        description=_"Due to the intense pain of stepping on LEGOs you cant walk properly.
 Movement -20% and accuracy -15%"
                     [/display]
                 [/abilities]
@@ -1360,6 +1360,9 @@ Movement -20% and accuracy -15%"
                         description=_"He brings such bad luck around him, that all allied adjacent units will have their chance to hit halved."
 						add=-50
 						affect_self=no
+						[affect_adjacent]
+							adjacent=n,ne,se,s,sw,nw
+						[/affect_adjacent]
 					[/leadership]
                 [/abilities]
             [/effect]
@@ -1375,12 +1378,12 @@ Movement -20% and accuracy -15%"
         [trait]
             id=elemental
         [/trait]
-        #textdomain wesnoth-help
         [trait]
             id=nfw_elemental_devil
-            name="<span color='#FF6400'>"+_"devil"+"</span>"
-            female_name="<span color='#FF6400'>"+_"female^devil"+"</span>"
-            description= _ "He has misbehaved and has been punished to a terrible fate. Immune to drain, poison, and plague"
+            name="<span color='#FF0000'>"+_"devil"+"</span>"
+            female_name="<span color='#FF0000'>"+_"female^devil"+"</span>"
+            description= _ "He has misbehaved and has been punished to a terrible fate. Immune to drain, poison, and plague."
+        #textdomain wesnoth-help
             help_text= _ "<italic>text='Elemental'</italic> units are immune to poison, drain, and plague."
             [effect]
                 apply_to=status
@@ -1397,7 +1400,7 @@ Movement -20% and accuracy -15%"
             # image
             [effect]
                 apply_to=image_mod
-                replace=~O(40%)~CS(155,0,0)
+                replace=~O(70%)~CS(100,0,0)
             [/effect]
             # resistance
             [effect]
@@ -1418,7 +1421,6 @@ Movement -20% and accuracy -15%"
 				range=ranged
                 set_type=fire
             [/effect]
-            #textdomain wesnoth-Non_Fatal_Wounds
             # general damage debuff
             [effect]
                 apply_to=attack
@@ -1426,7 +1428,8 @@ Movement -20% and accuracy -15%"
             [/effect]
         [/trait]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Go to Hell" color="255,0,0"}
+    #textdomain wesnoth-Non_Fatal_Wounds
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Go to Hell" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_angel_WOUND
@@ -1435,12 +1438,12 @@ Movement -20% and accuracy -15%"
         [trait]
             id=elemental
         [/trait]
-        #textdomain wesnoth-help
         [trait]
             id=nfw_elemental_angel
-            name="<span color='#FF6400'>"+_"devil"+"</span>"
-            female_name="<span color='#FF6400'>"+_"female^devil"+"</span>"
-            description= _ "He behaved well and was returned to a divine mission. Immune to drain, poison, and plague"
+            name="<span color='#96FFFF'>"+_"angel"+"</span>"
+            female_name="<span color='#96FFFF'>"+_"female^angel"+"</span>"
+            description= _ "He behaved well and was returned to a divine mission. Immune to drain, poison, and plague."
+        #textdomain wesnoth-help
             help_text= _ "<italic>text='Elemental'</italic> units are immune to poison, drain, and plague."
             [effect]
                 apply_to=status
@@ -1457,7 +1460,7 @@ Movement -20% and accuracy -15%"
             # image
             [effect]
                 apply_to=image_mod
-                replace=~O(40%)~CS(100,100,100)
+                replace=~O(70%)~CS(75,75,100)
             [/effect]
             # resistance
             [effect]
@@ -1475,7 +1478,6 @@ Movement -20% and accuracy -15%"
 				range=ranged
                 set_type=arcane
             [/effect]
-            #textdomain wesnoth-Non_Fatal_Wounds
             # general health debuff
             [effect]
                 apply_to=hitpoints
@@ -1483,7 +1485,13 @@ Movement -20% and accuracy -15%"
             [/effect]
         [/trait]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Go to Heaven" color="255,0,0"}
+    # kill unit to prevent negative*negative=positive rounding
+    [modify_unit]
+        {FILTER_EVENT_UNIT}
+        hitpoints=0
+    [/modify_unit]
+    #textdomain wesnoth-Non_Fatal_Wounds
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Go to Heaven" color="100,100,255"}
 #enddef
 
 #define NFW_TRAIT_UNDEAD
@@ -1579,6 +1587,7 @@ Movement -20% and accuracy -15%"
                 increase_damage=-25%
                 [set_specials]
                     mode=append
+        #textdomain wesnoth-help
                     [drains]
                         id=drains
                         name= _ "drains"
@@ -1587,7 +1596,7 @@ Movement -20% and accuracy -15%"
                     [/drains]
                 [/set_specials]
             [/effect]
-
+    #textdomain wesnoth-Non_Fatal_Wounds
             # range attacks
             [effect]
                 apply_to=attack
@@ -1890,7 +1899,6 @@ Movement -20% and accuracy -15%"
                 apply_to=attack
                 set_type=fire
             [/effect]
-            #textdomain wesnoth-Non_Fatal_Wounds
             # general damage debuff
             [effect]
                 apply_to=attack
@@ -1909,7 +1917,7 @@ Movement -20% and accuracy -15%"
         {FILTER_EVENT_UNIT}
         hitpoints=0
     [/modify_unit]
-
+            #textdomain wesnoth-Non_Fatal_Wounds
     {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Fire elemental" color="255,100,0"}
 #enddef
 
@@ -1965,7 +1973,6 @@ Movement -20% and accuracy -15%"
                     {WEAPON_SPECIAL_SLOW}
                 [/set_specials]
             [/effect]
-            #textdomain wesnoth-Non_Fatal_Wounds
             # general damage debuff
             [effect]
                 apply_to=attack
@@ -1984,7 +1991,7 @@ Movement -20% and accuracy -15%"
         {FILTER_EVENT_UNIT}
         hitpoints=0
     [/modify_unit]
-
+            #textdomain wesnoth-Non_Fatal_Wounds
     {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Water elemental" color="0,100,255"}
 #enddef
 
@@ -2039,7 +2046,7 @@ Movement -20% and accuracy -15%"
                     {WEAPON_SPECIAL_POISON}
                 [/set_specials]
             [/effect]
-            #textdomain wesnoth-Non_Fatal_Wounds
+
             # general damage debuff
             [effect]
                 apply_to=attack
@@ -2058,7 +2065,7 @@ Movement -20% and accuracy -15%"
         {FILTER_EVENT_UNIT}
         hitpoints=0
     [/modify_unit]
-
+            #textdomain wesnoth-Non_Fatal_Wounds
     {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Poison elemental" color="0,175,0"}
 #enddef
 
@@ -2105,7 +2112,7 @@ Movement -20% and accuracy -15%"
                     arcane=-30
                 [/resistance]
             [/effect]
-            #textdomain wesnoth-Non_Fatal_Wounds
+
             # general damage debuff
             [effect]
                 apply_to=attack
@@ -2124,7 +2131,7 @@ Movement -20% and accuracy -15%"
         {FILTER_EVENT_UNIT}
         hitpoints=0
     [/modify_unit]
-
+            #textdomain wesnoth-Non_Fatal_Wounds
     {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Arcane elemental" color="150,50,150"}
 #enddef
 
