--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -318,7 +318,7 @@
 * <b><i><span color='#963296'>Arcane elemental</span></i></b> +30% arcane resistance +All attacks changed to arcane -30% damage -40% HP > Units with arcane attacks, or wounded with arcane, or on a terrain with ethereal abyss = 8 HP when either the attacker or defender are in a terrain with ethereal abyss, once per attack
 * <b><i><span color='#7D3C00'>Earth elemental</span></i></b> +30% impact resistance +All attacks changed to impact -25% damage -30% HP -20% MP > Units with impact attacks, or wounded with impact, or on a cave terrain = 2 HP when either the attacker or defender are in a cave terrain, once per attack
 * <b><i><span color='#00FFFF'>Air elemental</span></i></b> +40% blade +20% pierce +20% impact resistance +All attacks changed to blade +30% MP -40% damage -60% HP > Units with blade attacks, or birds, falcons, gryphon, bats, or wounded with blade, or on a terrain with windmill = 4 HP when either the attacker or defender are in a terrain with windmill, once per attack
-* <b><i>All elementals</i></b> > Mechanical, undead, ghosts, spirits and elemental units can't receive any elemental wound, and no unit can received it twice, ~&lt;15% chance if conditions are met"
+* <b><i>All elementals</i></b> > Mechanical, undead, ghosts, spirits and elemental units can't receive any elemental wound, and no unit can received it twice, all have the elemental trait (inmune to poison, drain and plague), ~&lt;15% chance if conditions are met"
                     image="misc/nfw-icon.png"
                     {NFW_MENU_EXIT}
                 [/message]
@@ -336,8 +336,12 @@
 "+"<b><span color='#00E600'>"+_"Set to"+": "+"</span><span color='#00FFFF'>"+"{STATUS}"+"</span></b>"+"
 
 "+_"<b>Wounds list:</b>
-* <b><i>Paper cut</i></b> (-20% to all damage and -30% blade resistance) > All units - 10% chance
-* <b><i>Stepping on a Lego</i></b> (-20% mp and -15% accuracy) > All units - 10% chance"
+* <b><i>Paper cut</i></b> (-20% to all damage and -30% blade resistance) > All units, 2% chance
+* <b><i>Stepped on Lego</i></b> (-20% mp and -15% accuracy) > All units, 2% chance
+* <b><i>Idiotize</i></b> (20% probability of lost all his attacks every turn, will be displayed with a colored brown status) > All units, 2% chance - 25% with sling attack
+* <b><i>Jinx</i></b> (All adjacent units will do -50% damage) > All units, 2% chance - 25% with curse attack
+* <b><i>Go to Hell</i></b> (-50% damage and -50% arcane resistance, melee attacks changed to cold and ranged to fire, elemental trait, inmune to poison, drain and plague) > All units, 2% chance
+* <b><i>Go to Heaven</i></b> (-50% hp, -50% fire and cold resistance and +50% arcane resistance, ranged attacks changed to arcane, elemental trait, inmune to poison, drain and plague) > All units, 2% chance"
         side_for=$side_number
         image="misc/nfw-icon.png"
         [option]
