--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -771,7 +771,7 @@
         [/not]
     [/filter]
 #endif
-    {VARIABLE_OP rand_wound rand "1..50"}
+    {VARIABLE_OP rand_wound rand "1..6"}
     [switch]
         variable=rand_wound
 		 [case]
@@ -790,17 +790,51 @@
 			{VARIABLE nfw_already_wound yes}
 		[/case]
 		[case]
-			value=3
+			value=7,8,9,10,11,12,13,14,15,16,17,18,19
+			[if]
+				[have_location]
+					{EVENT_UNIT}
+					[filter]
+						[has_attack]
+							name=curse
+						[/has_attack]
+					[/filter]
+				[/have_location]
+				[then]
+					{NFW_jinx_WOUND}
+					{VARIABLE nfw_already_wound yes}
+				[/then]
+			[/if]
+		[/case]
+		[case]
+			value=4
 			{NFW_dumb_WOUND}
 			{VARIABLE nfw_already_wound yes}
 		[/case]
 		[case]
-			value=4
+			value=31,32,33,34,35,36,37,38,39,40,41,42,43
+			[if]
+				[have_location]
+					{EVENT_UNIT}
+					[filter]
+						[has_attack]
+							name=sling
+						[/has_attack]
+					[/filter]
+				[/have_location]
+				[then]
+					{NFW_dumb_WOUND}
+					{VARIABLE nfw_already_wound yes}
+				[/then]
+			[/if]
+		[/case]
+		[case]
+			value=5
 			{NFW_angel_WOUND}
 			{VARIABLE nfw_already_wound yes}
 		[/case]
 		[case]
-			value=5
+			value=6
 			{NFW_devil_WOUND}
 			{VARIABLE nfw_already_wound yes}
 		[/case]
