--- a/utils/Wound_logic.cfg
+++ b/utils/Wound_logic.cfg
@@ -88,7 +88,7 @@
 					duration=turn end
 					[effect]
 						apply_to=image_mod
-						replace="CS(50,50,0)"
+						replace=~CS(50,50,0)
 					[/effect]
 					[effect]
 						apply_to=attack
