--- a/utils/Options.cfg
+++ b/utils/Options.cfg
@@ -48,7 +48,7 @@
     [checkbox]
         id=nfw_03
         name=_"Funny wounds"
-        description=_"Add Stepped on LEGO and Paper cut as a possibility to the table."
+        description=_"Add funny and silly wounds that are incurable as a possibility to the table."
         default=no
     [/checkbox]
 
