--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -1335,8 +1335,8 @@ Movement -20% and accuracy -15%"
                     [display]
                         id=dumb_display
                         name="<span color='#DA0000'>"+_"dumb"+"</span>"
-                        description=_"Se quedó tan tonto de la última pedrada, que ya no sabe cuándo atacar.
-20% de posibilidades de quedarse sin atacar un turno."
+                        description=_"Turned so stupid from the last stone on his head, that he no longer knows when to attack.
+20% chance to lost all attacks every turn."
                     [/display]
                 [/abilities]
             [/effect]
