--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -331,7 +331,7 @@
 #define NFW_FUNNY STATUS
     [message]
         speaker=narrator
-        message="<b>"+_"Funny wounds"+" → "+"</b>"+_"Add Stepped on LEGO and Paper cut as a possibility to the table."+"
+        message="<b>"+_"Funny wounds"+" → "+"</b>"+_"Add funny and silly wounds that are incurable as a possibility to the table."+"
 
 "+"<b><span color='#00E600'>"+_"Set to"+": "+"</span><span color='#00FFFF'>"+"{STATUS}"+"</span></b>"+"
 
