--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -97,6 +97,7 @@
                     id=NFW_broken_arm_Healing
                     description=_ "Recover from broken arm"
                     max_times=-1
+					icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -138,6 +139,7 @@
                     id=NFW_broken_wing_Healing
                     description=_ "Recover from broken wing"
                     max_times=-1
+					icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -179,6 +181,7 @@
                     id=NFW_broken_leg_Healing
                     description=_ "Recover from broken leg"
                     max_times=-1
+					icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -223,6 +226,7 @@
                     id=NFW_broken_rib_Healing
                     description= _"Recover from broken rib"
                     max_times=-1
+					icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -268,6 +272,7 @@
                     id=NFW_burned_Healing
                     description= _"Recover from burn"
                     max_times=-1
+					icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -343,6 +348,7 @@
                     id=NFW_concussion_Healing
                     description= _"Recover from concussion"
                     max_times=-1
+					icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -783,6 +789,7 @@ Face your fears to try to overcome them."
                     id=NFW_frostbite_Healing
                     description= _"Recover from frostbite"
                     max_times=-1
+					icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -827,6 +834,7 @@ Face your fears to try to overcome them."
                     id=NFW_gash_Healing
                     description= _"Recover from gash"
                     max_times=-1
+					icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -865,6 +873,7 @@ Face your fears to try to overcome them."
                     id=NFW_infectiont_Healing
                     description= _"Recover from infection"
                     max_times=-1
+					icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -917,6 +926,7 @@ Face your fears to try to overcome them."
                     id=NFW_insane_Healing
                     description= _"Recover from insanity"
                     max_times=-1
+					icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -959,6 +969,7 @@ Face your fears to try to overcome them."
                     id=NFW_maimed_Healing
                     description= _"Recover from mutilation"
                     max_times=-1
+					icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -1013,6 +1024,7 @@ Face your fears to try to overcome them."
                     id=NFW_necrosis_Healing
                     description= _"Recover from necrosis"
                     max_times=-1
+					icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -1059,6 +1071,7 @@ Face your fears to try to overcome them."
                     id=NFW_necrosis_Healing
                     description= _"Recover from rot"
                     max_times=-1
+					icon="misc/workbench.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -1096,6 +1109,7 @@ Face your fears to try to overcome them."
                     id=NFW_amnesia_Healing
                     description= _"Recover from amnesia"
                     max_times=-1
+					icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -1134,6 +1148,7 @@ Face your fears to try to overcome them."
                     id=NFW_sick_Healing
                     description= _"Recover from sickness"
                     max_times=-1
+					icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -1186,6 +1201,7 @@ Face your fears to try to overcome them."
                     id=NFW_wild_magic_Healing
                     description= _"Recover from wild magic"
                     max_times=-1
+					icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -1240,6 +1256,7 @@ Face your fears to try to overcome them."
                     id=NFW_damaged_Healing
                     description= _"Repair"
                     max_times=-1
+					icon="misc/workbench.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
